# lcov2

./: Cargo.toml  README.md
src/: error.rs  html.rs  lib.rs
tests/rsrc/html/: index.html  index.info
tests/rsrc/html/home/: index.html
tests/rsrc/html/home/rhart/: index.html
tests/rsrc/html/home/rhart/hub/: index.html
tests/rsrc/html/home/rhart/hub/lcov2/: index.html
tests/rsrc/html/home/rhart/hub/lcov2/tests/: index.html
tests/rsrc/html/home/rhart/hub/lcov2/tests/rsrc/: index.html  test.c.html  test2.c.html
tests/rsrc/html/home/rhart/hub/lcov2/tests/rsrc/subdir1/: index.html  test.c.html
tests/rsrc/html/home/rhart/hub/lcov2/tests/rsrc/subdir2/: index.html  test-subdir2.c.html
